# software-engineering-ws15

./: CMakeLists.txt  CMakeLists.txt~  Makefile  abstractdecorator.cpp  centimetertoinchesconverter.cpp  centimetertoinchesconverter.hpp  centimetertoinchesconverter.hpp~7ea1c8ab96af96df5953cfccbf9e0346c2f049dc  command.hpp  converter.cpp  converter.hpp  converterfactory.cpp  converterfactory.hpp  currencyconverter.cpp  currencyconverter.hpp  currencyconverter.hpp~7ea1c8ab96af96df5953cfccbf9e0346c2f049dc  dollartoeuroconverter.cpp  dollartoeuroconverter.cpp~7ea1c8ab96af96df5953cfccbf9e0346c2f049dc  dollartoeuroconverter.hpp  dollartoeuroconverter.hpp~7ea1c8ab96af96df5953cfccbf9e0346c2f049dc  eurotodanishkroneconverter.cpp  eurotodanishkroneconverter.cpp~7ea1c8ab96af96df5953cfccbf9e0346c2f049dc  eurotodanishkroneconverter.hpp  eurotodollarconverter.cpp  eurotodollarconverter.cpp~7ea1c8ab96af96df5953cfccbf9e0346c2f049dc  eurotodollarconverter.hpp  eurotodollarconverter.hpp~7ea1c8ab96af96df5953cfccbf9e0346c2f049dc  invert.hpp  kilometertomilesconverter.cpp  kilometertomilesconverter.hpp  lengthconverter.cpp  lengthconverter.hpp  main.cpp
concreteConverter/currencyConverter/: currencyconverter.hpp  dollartoeuroconverter.hpp  (+1 more)
header/: abstractdecorator.hpp  command.hpp  converter.hpp  converterfactory.hpp  kilometertomilesconverter.hpp
src/: abstractdecorator.cpp  dollartoeuroconverter.cpp  eurotodanishkroneconverter.cpp  invert.cpp  main.cpp
tests/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  converter  test  test.cpp  tinytest.h
(+2 files in other folders)
